Fix image size on index page Increment z-index of close button of slider

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -66,6 +66,7 @@ html, body {
     overflow: hidden;
     width: 100%;
     -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: none;
 }
 
 
@@ -251,10 +252,8 @@ p {
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    width: auto%;
-    height: auto;
-    min-width: 100%;
-    min-height: 100%;
+    width: auto;
+    height: 100%;
 }
 
 
@@ -349,7 +348,8 @@ p {
 
 .gal-polaroid-title {
     font-size: .7em;
-    margin: .5em;
+    line-height: 1.5em;
+    margin: .3em;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -458,7 +458,7 @@ p {
     position: absolute;
     right: 1em;
     top: 1em;
-    z-index: 101;
+    z-index: 102;
 }
 
 .slider-button {
@@ -588,91 +588,7 @@ p {
 }
 
 
-/* Button */
 
-.buttonHolder{
-    display: flex;
-    justify-content: flex-end;
-    position: absolute;
-    right: 0;
-    top: 1em;
-}
-
-
-.button{
-    background-image: -webkit-linear-gradient(top, #f4f1ee, #fff);
-    background-image: linear-gradient(top, #f4f1ee, #fff);
-    border-radius: 50%;
-    box-shadow: -2px 3px 10px 0 rgba(0, 0, 0, .3), inset 0 4px 1px 1px white, inset 0 -3px 1px 1px rgba(204,198,197,.5);
-    float:left;
-    height: 2em;
-    margin: 0 .5em 15px;
-    position: relative;
-    -webkit-transition: all .1s linear;
-    transition: all .1s linear;
-    width: 2em;
-}
-
-
-.button:after{
-    color:#e9e6e4;
-    content: "";
-    display: flex;
-    font-weight: bold;
-    height: 30px;
-    position: absolute;
-    text-decoration: none;
-    text-shadow: 0px -1px 1px #bdb5b4, 1px 1px 1px white;
-    width: 30px;
-}
-
-
-.back:after{
-    content: "◄";
-    left: .4em;
-    top: .35em;
-}
-
-.close:after{
-    content: "✖";
-    left: .55em;
-    top: .3em;
-}
-
-.next:after{
-    content: "►";
-    left: .6em;
-    top: .3em;
-}
-
-
-
-.button:hover{
-    background-image: -webkit-linear-gradient(top, #fff, #f4f1ee);
-    background-image: linear-gradient(top, #fff, #f4f1ee);
-    color:#0088cc;
-}
-
-.back:hover:after, .next:hover:after{
-    color:#83d244;
-    text-shadow:0 0 6 #83d244;
-}
-
-.close:hover:after{
-    color:#eb2f2f;
-    text-shadow:0 0 6px #eb2f2f;
-}
-
-.button:active{
-    background-image: -webkit-linear-gradient(top, #efedec, #f7f4f4);
-    background-image: linear-gradient(top, #efedec, #f7f4f4);
-    box-shadow: 0 3px 5px 0 rgba(0,0,0,.4), inset 0 -3px 1px 1px rgba(204,198,197,.5);
-}
-
-.button:active:after{
-    color:#dbd2d2;
-    text-shadow: 0 -1px 1px #bdb5b4, 0px 1px 1px white;
-}
 
 
 /*
@@ -735,6 +651,11 @@ copied from https://css-tricks.com/custom-scrollbars-in-webkit/
 
 
 @media screen and (orientation: landscape) {
+    .main-pic {
+        width: 100%;
+        height: auto;
+    }
+
     .box {
         /*margin: 1em auto;*/
         width: 33%;
@@ -744,21 +665,6 @@ copied from https://css-tricks.com/custom-scrollbars-in-webkit/
         flex-direction: column;
     }
 
-    .back {
-        order: 3;
-    }
-
-    .next {
-        order: 1;
-    }
-
-    .close {
-        order: 2;
-    }
-
-/*    .painting-pic {
-        padding: 1em .5em .5em;
-    }*/
 
     .gal-container {
         width: 30%;
